# MoneyMan

./: .gitignore  manage.py  pyproject.toml
expenses/: models.py
expenses/management/commands/: create_fake_expenses.py
expenses/migrations/: 0001_initial.py
money_man/: asgi.py  settings.py  urls.py  wsgi.py
