[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "money_man"
authors = [
    {name = "Ido Frenkel", email = "ido123net@gmail.com"},
]
readme = "README.rst"
requires-python = ">=3.10"
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "Django",
]
version = "v0.1.0"

[project.optional-dependencies]
dev = [
    "ruff"
]

[tool.ruff.format]
quote-style = "single"
