[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[project]
name = "money_man"
authors = [
    {name = "Ido Frenkel", email = "ido123net@gmail.com"},
]
readme = "README.rst"
requires-python = ">=3.10"
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "Django",
    "django_extensions",
]
version = "v0.1.0"

[project.optional-dependencies]
dev = [
    "ruff",
    "ipython",
    "faker",
    "tqdm",
]

[tool.ruff.format]
quote-style = "single"
